Life support updates

--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_Snacks.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_Snacks.cfg
@@ -86,7 +86,11 @@
 		criticalSuccess = 90
 		criticalFail = 20
 		cropResource = Snacks
-		cropYield = 270 //You'll have enough to feed 3 kerbals for 90 days
+
+		//Calibrated for standard 1 snack per meal, 3 meals per day
+		//Supports 3 kerbals
+		cropYield = 810
+
 		criticalSuccessBonus = 0.25
 		failureLoss = 0.5
 		repairSkill = ScienceSkill
@@ -96,13 +100,19 @@
 		INPUT_RESOURCE
 		{
 			ResourceName = Water
-			Ratio = 0.0002
+			Ratio = 0.000104167
 		}
 
 		INPUT_RESOURCE
 		{
 			ResourceName = Fertilizer
-			Ratio = 0.00002
+			Ratio = 0.000104167
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = Soil
+			Ratio = 0.0004167
 		}
 
 		INPUT_RESOURCE
@@ -114,7 +124,7 @@
 		REQUIRED_RESOURCE
 		{
 			ResourceName = Fertilizer
-			Ratio = 100
+			Ratio = 101.25
 		}
 	}
 
@@ -155,7 +165,11 @@
 		criticalSuccess = 90
 		criticalFail = 20
 		cropResource = Snacks
-		cropYield = 843.75 //You'll have enough to feed 3 kerbals for 90 days
+
+		//Calibrated for standard 1 snack per meal, 3 meals per day
+		//Supports 10 kerbals
+		cropYield = 2700
+
 		criticalSuccessBonus = 0.25
 		failureLoss = 0.5
 		repairSkill = ScienceSkill
@@ -165,13 +179,19 @@
 		INPUT_RESOURCE
 		{
 			ResourceName = Water
-			Ratio = 0.0004
+			Ratio = 0.00034722
 		}
 
 		INPUT_RESOURCE
 		{
 			ResourceName = Fertilizer
-			Ratio = 0.00004
+			Ratio = 0.00034722
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = Soil
+			Ratio = 0.00138889
 		}
 
 		INPUT_RESOURCE
@@ -183,23 +203,23 @@
 		REQUIRED_RESOURCE
 		{
 			ResourceName = Fertilizer
-			Ratio = 250
+			Ratio = 337.5
 		}
 	}
 
 	RESOURCE
 	{
 		name = Fertilizer
-		amount = 1000
-		maxAmount = 1000
+		amount = 4000
+		maxAmount = 4000
 		isTweakable = true
 	}
 
 	RESOURCE
 	{
 		name = Water
-		amount = 1000
-		maxAmount = 1000
+		amount = 4000
+		maxAmount = 4000
 		isTweakable = true
 	}
 }
@@ -270,14 +290,14 @@
 {
 	@MODULE[WBIMultipurposeStorage]
 	{
-		resourcesToKeep = Snacks
+		resourcesToKeep = Snacks;Soil
 	}
 
 	RESOURCE
 	{
 		name= Snacks
 		amount = 0
-		maxAmount = 100
+		maxAmount = 200
 	}
 }
 
@@ -285,14 +305,14 @@
 {
 	@MODULE[WBIMultipurposeLab]
 	{
-		resourcesToKeep = Snacks
+		resourcesToKeep = Snacks;Soil
 	}
 
 	RESOURCE
 	{
 		name= Snacks
 		amount = 0
-		maxAmount = 100
+		maxAmount = 400
 	}
 }
 
@@ -300,14 +320,14 @@
 {
 	@MODULE[WBIMultipurposeHab]
 	{
-		resourcesToKeep = Snacks
+		resourcesToKeep = Snacks;Soil
 	}
 
 	RESOURCE
 	{
 		name= Snacks
 		amount = 0
-		maxAmount = 200
+		maxAmount = 800
 	}
 }
 
@@ -315,14 +335,14 @@
 {
 	@MODULE[WBIMultipurposeHab]
 	{
-		resourcesToKeep = Snacks
+		resourcesToKeep = Snacks;Soil
 	}
 
 	RESOURCE
 	{
 		name= Snacks
 		amount = 0
-		maxAmount = 200
+		maxAmount = 800
 	}
 }
 
@@ -330,14 +350,14 @@
 {
 	@MODULE[WBIMultipurposeHab]
 	{
-		resourcesToKeep = Snacks
+		resourcesToKeep = Snacks;Soil
 	}
 
 	RESOURCE
 	{
 		name= Snacks
 		amount = 0
-		maxAmount = 200
+		maxAmount = 800
 	}
 }
 
@@ -345,13 +365,13 @@
 {
 	@MODULE[WBIMultipurposeHab]
 	{
-		resourcesToKeep = Snacks
+		resourcesToKeep = Snacks;Soil
 	}
 
 	RESOURCE
 	{
 		name= Snacks
 		amount = 0
-		maxAmount = 200
+		maxAmount = 800
 	}
 }
