--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_USILS.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_USILS.cfg
@@ -1,9 +1,19 @@
 @PATH_HABITATION[Pigpen]:NEEDS[USILifeSupport]
 {
-	MODULE
+	MODULE 
 	{
 		name = ModuleHabitation
-		HabMultiplier = 1.5
+		BaseKerbalMonths = 0
+		CrewCapacity = 4
+		BaseHabMultiplier = 1.6
+		ConverterName = Habitat
+		StartActionName = Start Habitat
+		StopActionName = Stop Habitat		
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 1.2
+		}
 	}
 
 	MODULE
@@ -154,7 +164,7 @@
 		criticalSuccess = 95
 		criticalFail = 20
 		cropResource = Supplies
-		cropYield = 4374 //You'll have enough to feed 3 kerbals for 90 days, 16.2 Supplies per day.
+		cropYield = 2916 //You'll have enough to feed 3 kerbals for 90 days, 10.8 Supplies per day.
 		failureLoss = 0.5
 		repairSkill = ScienceSkill
 		repairResource = RocketParts
@@ -246,7 +256,7 @@
 		criticalSuccess = 95
 		criticalFail = 20
 		cropResource = Supplies
-		cropYield = 13122 //You'll have enough to feed 9 kerbals for 90 days, 16.2 Supplies per day.
+		cropYield = 8748 //You'll have enough to feed 9 kerbals for 90 days, 10.8 Supplies per day.
 		failureLoss = 0.5
 		repairSkill = ScienceSkill
 		repairResource = RocketParts
@@ -347,10 +357,19 @@
 		name = ModuleLifeSupport
 	}
 
-	MODULE
+	MODULE 
 	{
 		name = ModuleHabitation
-		KerbalMonths = 15
+		BaseKerbalMonths = 15
+		CrewCapacity = 2
+		ConverterName = Habitat
+		StartActionName = Start Habitat
+		StopActionName = Stop Habitat		
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 1.2
+		}
 	}
 	
 	RESOURCE
@@ -376,10 +395,19 @@
 		name = ModuleLifeSupport
 	}
 
-	MODULE
+	MODULE 
 	{
 		name = ModuleHabitation
-		KerbalMonths = 25
+		BaseKerbalMonths = 15
+		CrewCapacity = 4
+		ConverterName = Habitat
+		StartActionName = Start Habitat
+		StopActionName = Stop Habitat		
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 1.2
+		}
 	}
 	
 	RESOURCE
@@ -444,16 +472,26 @@
 
 @PATH_HABITATION[PonderosaHab]:NEEDS[USILifeSupport]
 {
-	MODULE
+	MODULE 
 	{
 		name = ModuleHabitation
-		HabMultiplier = 1.5
+		BaseKerbalMonths = 0
+		CrewCapacity = 3
+		BaseHabMultiplier = 1.6
+		ConverterName = Habitat
+		StartActionName = Start Habitat
+		StopActionName = Stop Habitat		
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 1.2
+		}
 	}
 
 	MODULE
 	{
 		name = ModuleLifeSupportRecycler
-		CrewCapacity = 6
+		CrewCapacity = 4
 		RecyclePercent = .90
 		ConverterName = Life Support
 		tag = Life Support
@@ -463,32 +501,46 @@
 		INPUT_RESOURCE
 		{
 			ResourceName = ElectricCharge
-			Ratio = 1
+			Ratio = 23
 		}
-
-		INPUT_RESOURCE
-		{
-			ResourceName = ReplacementParts
-			Ratio = 0.00001
-		}	
 	}
 }
 
 @PATH_HABITATION[Blacksmith]:NEEDS[USILifeSupport]
 {
-	MODULE
+	MODULE 
 	{
 		name = ModuleHabitation
-		HabMultiplier = 1.5
+		BaseKerbalMonths = 0
+		CrewCapacity = 3
+		BaseHabMultiplier = 1.6
+		ConverterName = Habitat
+		StartActionName = Start Habitat
+		StopActionName = Stop Habitat		
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 1.2
+		}
 	}
 }
 
 @PATH_HABITATION[GeoLab]:NEEDS[USILifeSupport]
 {
-	MODULE
+	MODULE 
 	{
 		name = ModuleHabitation
-		HabMultiplier = 1.5
+		BaseKerbalMonths = 0
+		CrewCapacity = 3
+		BaseHabMultiplier = 1.6
+		ConverterName = Habitat
+		StartActionName = Start Habitat
+		StopActionName = Stop Habitat		
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 1.2
+		}
 	}
 }
 
@@ -499,10 +551,19 @@
 		name = ModuleLifeSupport
 	}
 
-	MODULE
+	MODULE 
 	{
 		name = ModuleHabitation
-		KerbalMonths = 17.5
+		BaseKerbalMonths = 17
+		CrewCapacity = 3
+		ConverterName = Habitat
+		StartActionName = Start Habitat
+		StopActionName = Stop Habitat		
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 1.2
+		}
 	}
 
 	RESOURCE
