--- a/GameData/WildBlueIndustries/Buffalo/Parts/Command/BuffaloCab.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Command/BuffaloCab.cfg
@@ -14,7 +14,7 @@ PART
 	node_stack_top = 0, -0.08, -0.626, 0, 0, -1, 1
 	node_stack_bottom = 0, -0.08, 0.626, 0, 0, 1, 1
 
-	TechRequired = advFlightControl
+	TechRequired = spaceExploration
 	entryCost = 16000
 	cost = 3200
 	category = Pods
