--- a/GameData/WildBlueIndustries/Buffalo/Parts/Structural/Chassis1u.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Structural/Chassis1u.cfg
@@ -17,7 +17,7 @@ PART
 	node_stack_left = -0.423, 0, 0, -1, 0, 0, 1
 	node_stack_right = 0.423, 0, 0, 1, 0, 0, 1
 
-	TechRequired = advConstruction
+	TechRequired = spaceExploration
 	entryCost = 2000
 	cost = 200
 	category = Structural
