--- a/GameData/WildBlueIndustries/Buffalo/Parts/Structural/Chassis2u.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Structural/Chassis2u.cfg
@@ -21,7 +21,7 @@ PART
 	node_stack_right = 0.423, 0, 0.423, 1, 0, 0, 1
 	node_stack_right2 = 0.423, 0, -0.423, 1, 0, 0, 1
 
-	TechRequired = advConstruction
+	TechRequired = spaceExploration
 	entryCost = 3000
 	cost = 400
 	category = Structural
