--- a/GameData/WildBlueIndustries/Buffalo/Parts/Utility/CrewCab.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Utility/CrewCab.cfg
@@ -17,7 +17,7 @@ PART
 	node_stack_right = 1.035, 0.216, 0, 1, 0, 0, 1
 	node_stack_top = 0, 0.423, -0.626, 0, 0, -1, 1
 
-	TechRequired = advConstruction
+	TechRequired = spaceExploration
 	entryCost = 6500
 	cost = 1400
 	category = Utility
