--- a/GameData/WildBlueIndustries/Buffalo/Parts/Structural/Chassis2u.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Structural/Chassis2u.cfg
@@ -10,6 +10,7 @@ PART
 	}
 	rescaleFactor = 1
 
+	node_attach = 0, 0.1625, 0, 0, 1, 0, 1
 	node_stack_top = 0, 0.1625, 0.423, 0, 1, 0, 1
 	node_stack_top2 = 0, 0.1625, -0.423, 0, 1, 0, 1
 	node_stack_bottom = 0, -0.1625, 0.423, 0, -1, 0, 1
@@ -31,7 +32,7 @@ PART
 	description = This sturdy chassis is designed to support a variety of components including the Buffalo Command Cab, and wheels. It also contains a battery pack, though field upgrades can enable it to hold a variety of different resources. This particular version is twice the length of the standard Chassis unit.
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
-	attachRules = 1,0,1,1,0
+	attachRules = 1,1,1,1,0
 
 	// --- standard part parameters ---
 	mass = 0.25
