--- a/GameData/WildBlueIndustries/Buffalo/Parts/Structural/ChassisEndu.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Structural/ChassisEndu.cfg
@@ -9,6 +9,7 @@ PART
 		model = WildBlueIndustries/Buffalo/Assets/ChassisEndu
 	}
 	rescaleFactor = 1
+	node_attach = 0, -0.1625, 0, 0, -1, 0, 1
 	node_stack_top = 0, 0.1625, 0, 0, 1, 0, 1
 	node_stack_bottom = 0, -0.1625, 0, 0, -1, 0, 1
 	node_stack_front = 0, 0, -0.423, 0, 0, -1, 1
@@ -25,7 +26,7 @@ PART
 	description = This sturdy chassis is designed to support a variety of components including the Buffalo Command Cab, and wheels. This end unit has no storage capacity but it provides a nice bookend to a chassis.
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
-	attachRules = 1,0,1,1,0
+	attachRules = 1,1,1,1,0
 
 	// --- standard part parameters ---
 	mass = 0.15
