--- a/GameData/WildBlueIndustries/Buffalo/Parts/Structural/ChassisSlim2u.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Structural/ChassisSlim2u.cfg
@@ -9,6 +9,7 @@ PART
 		model = WildBlueIndustries/Buffalo/Assets/ChassisSlim2u
 	}
 	rescaleFactor = 1
+	node_attach = 0, 0.1625, 0, 0, 1, 0, 1
 	node_stack_top = 0, 0.1625, 0.423, 0, 1, 0, 1
 	node_stack_top2 = 0, 0.1625, -0.423, 0, 1, 0, 1
 	node_stack_bottom = 0, -0.1625, 0.423, 0, -1, 0, 1
@@ -30,7 +31,7 @@ PART
 	description = This sturdy chassis is half the width of a standard 2U chassis, perfect for fitting wheels into rovers able to drive out of cargo bays. It contains an integrated solar panel and a battery pack, though field upgrades can enable it to hold a variety of different resources.
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
-	attachRules = 1,0,1,1,0
+	attachRules = 1,1,1,1,0
 
 	// --- standard part parameters ---
 	mass = 0.25
