--- a/GameData/WildBlueIndustries/Buffalo/Parts/Structural/HalfChassis.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Structural/HalfChassis.cfg
@@ -9,6 +9,7 @@ PART
 		model = WildBlueIndustries/Buffalo/Assets/HalfChassis
 	}
 	rescaleFactor = 1
+	node_attach = 0, 0.1625, 0, 0, 1, 0, 1
 	node_stack_top = 0, 0.1625, 0, 0, 1, 0, 1
 	node_stack_bottom = 0, -0.1625, 0, 0, -1, 0, 1
 	node_stack_back = 0, 0, 0.423, 0, 0, 1, 1
@@ -26,7 +27,7 @@ PART
 	description = This sturdy chassis is half the size of a standard chassis. It contains an integrated solar panel and a battery pack, though field upgrades can enable it to hold a variety of different resources.
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
-	attachRules = 1,0,1,1,0
+	attachRules = 1,1,1,1,0
 
 	// --- standard part parameters ---
 	mass = 0.125
