--- a/GameData/WildBlueIndustries/Buffalo/Parts/Wheel/M1A1OmniWheel.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Wheel/M1A1OmniWheel.cfg
@@ -128,6 +128,15 @@ PART
 		slipSharpness = 2.0
 	}
 
+//	MODULE
+//	{
+//		name = ModuleAnimateGeneric
+//		animationName = Deploy
+//		startEventGUIName = Narrow Wheelbase
+//		endEventGUIName = Wide Wheelbase
+//		actionGUIName = Toggle Wheelbase
+//	}
+
 	MODULE
 	{
 		name = WBIModuleDecouple
