--- a/GameData/WildBlueIndustries/Buffalo/Parts/Structural/QuarterChassis.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Structural/QuarterChassis.cfg
@@ -10,6 +10,7 @@ PART
 	}
 	rescaleFactor = 1
 
+	node_attach = 0, 0.1625, 0, 0, 1, 0, 1
 	node_stack_bottom = 0, -0.1625, 0, 0, -1, 0, 1
 	node_stack_back = 0, 0, 0.212066, 0, 0, 1, 1
 	node_stack_front = 0, 0, -0.212066, 0, 0, -1, 1
@@ -26,7 +27,7 @@ PART
 	description = This sturdy chassis is one-quarter the size of a standard chassis. Why such a small chassis section exists is rather puzzling. Perhaps it works best with really small rovers. It contains an integrated solar panel and a battery pack, though field upgrades can enable it to hold a variety of different resources.
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
-	attachRules = 1,0,1,1,0
+	attachRules = 1,1,1,1,0
 
 	// --- standard part parameters ---
 	mass = 0.05
