--- a/Extras/MCM/ModuleManagerPatches/MM_CLS.cfg
+++ b/Extras/MCM/ModuleManagerPatches/MM_CLS.cfg
@@ -1,4 +1,4 @@
-@PART[WBI_MCM,WBI_HomesteadMk2,WBI_MBU,WBI_Stockyard2502,WBI_Stockyard3752,WBI_Stagecoach]:HAS[!MODULE[ModuleConnectedLivingSpace]] 
+@PART[WBI_MCM,WBI_HomesteadMk2,WBI_MBU,WBI_Stockyard2502,WBI_Stockyard3752,WBI_Stagecoach]:HAS[!MODULE[ModuleConnectedLivingSpace]]:NEEDS[ConnectedLivingSpace]
 {
     MODULE
     {
