--- a/Extras/MCM/Parts/MCM.cfg
+++ b/Extras/MCM/Parts/MCM.cfg
@@ -59,7 +59,7 @@ PART
 		name = crewCabinInternals
 	}
 
-	MODULE 
+	MODULE:NEEDS[Workshop] 
 	{
 		name = OseModuleWorkshop
 		ConversionRate = 1 // How much of a parts mass needs to be processed until it is done
@@ -69,7 +69,7 @@ PART
 		MinimumCrew = 2 // Amount of Kerbals needed for the Workshop to work
 	}
 
-	MODULE
+	MODULE:NEEDS[Workshop]
 	{
 		name = OseModuleRecycler
 		ConversionRate = 0.15 // How much of a parts mass will be recycled
@@ -127,6 +127,48 @@ PART
 		Category = Utility
 		IconPath = Squad/PartList/SimpleIcons/R&D_node_icon_generic
 	}
+
+	MODULE:NEEDS[Workshop]
+	{
+		name = OseModuleCategoryAddon
+		Category = Electrical
+		IconPath = Squad/PartList/SimpleIcons/R&D_node_icon_electrics
+	}
+
+	MODULE:NEEDS[Workshop]
+	{
+		name = OseModuleCategoryAddon
+		Category = Ground
+		IconPath = Squad/PartList/SimpleIcons/R&D_node_icon_advancedmotors
+	}
+
+	MODULE:NEEDS[Workshop]
+	{
+		name = OseModuleCategoryAddon
+		Category = Payload
+		IconPath = Squad/PartList/SimpleIcons/R&D_node_icon_composites
+	}
+
+	MODULE:NEEDS[Workshop]
+	{
+		name = OseModuleCategoryAddon
+		Category = Communication
+		IconPath = Squad/PartList/SimpleIcons/R&D_node_icon_advunmanned
+	}
+
+	MODULE:NEEDS[Workshop]
+	{
+		name = OseModuleCategoryAddon
+		Category = Coupling
+		IconPath = Squad/PartList/SimpleIcons/cs_size3
+	}
+
+	MODULE:NEEDS[Workshop]
+	{
+		name = OseModuleCategoryAddon
+		Category = Thermal
+		IconPath = Squad/PartList/SimpleIcons/fuels_monopropellant
+	} 
 
 	MODULE:NEEDS[Workshop]
 	{
@@ -224,7 +266,7 @@ PART
 		name = WBIPropStateHelper
 	}
 
-	MODULE
+	MODULE:NEEDS[KIS]
 	{
 		name = ModuleKISInventory
 		maxVolume = 700
