--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Science/DocSciLab.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Science/DocSciLab.cfg
@@ -197,7 +197,7 @@ PART
 		ecRequired = 0.04
 	}
 
-	MODULE
+	MODULE:NEEDS[KIS]
 	{
 		name = ModuleKISInventory
 		maxVolume = 2000
@@ -213,34 +213,7 @@ PART
 		defaultMoveSndPath = KIS/Sounds/itemMove
 	}
 
-	//Seat inventories are added manually.
-	MODULE
-	{
-		name = ModuleKISInventory
-		maxVolume = 0.001
-		slotsX = 2
-		slotsY = 4
-		slotSize = 50
-		itemIconResolution = 128
-		selfIconResolution = 128
-		openSndPath = KIS/Sounds/inventoryOpen
-		closeSndPath = KIS/Sounds/inventoryClose
-	}
-
-	MODULE
-	{
-		name = ModuleKISInventory
-		maxVolume = 0.001
-		slotsX = 2
-		slotsY = 4
-		slotSize = 50
-		itemIconResolution = 128
-		selfIconResolution = 128
-		openSndPath = KIS/Sounds/inventoryOpen
-		closeSndPath = KIS/Sounds/inventoryClose
-	}
-
-	MODULE
+	MODULE:NEEDS[KIS]
 	{
 		name = ModuleKISItemEvaTweaker
 		editorItemsCategory = false
