--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Captstone.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Captstone.cfg
@@ -57,7 +57,7 @@ CrewCapacity = 0
 fuelCrossFeed = True
 bulkheadProfiles = size1, srf
 
-MODULE
+MODULE:NEEDS[KIS]
 {
     name = ModuleKISItemEvaTweaker
     editorItemsCategory = false
