--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Patio.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Patio.cfg
@@ -46,7 +46,7 @@ breakingForce = 200
 breakingTorque = 200
 bulkheadProfiles = size1, srf
 
-	MODULE
+	MODULE:NEEDS[KIS]
 	{
 		name = ModuleKISItem
 		volumeOverride = 250
