--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Saddle.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Saddle.cfg
@@ -36,7 +36,7 @@ PART
 	breakingTorque = 2000
 	bulkheadProfiles = size1, srf
 
-	MODULE
+	MODULE:NEEDS[KIS]
 	{
 	    name = ModuleKISItem
 	    volumeOverride = 100
@@ -46,7 +46,7 @@ PART
 	    staticAttachBreakForce = 2000
 	}
 
-	MODULE
+	MODULE:NEEDS[KAS]
 	{
 	    name = KASModuleStrut 
 	    nodeTransform = plugPort
@@ -67,7 +67,7 @@ PART
 	    tubeTexPath = KAS/Textures/pipe
 	}
 
-	MODULE
+	MODULE:NEEDS[KIS]
 	{
 	    name = ModuleKISItemEvaTweaker
 	    editorItemsCategory = false
