--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Switchback.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Switchback.cfg
@@ -54,7 +54,7 @@ PART
 		}
 	}
 
-	MODULE
+	MODULE:NEEDS[KIS]
 	{
 		name = ModuleKISItemEvaTweaker
 		volumeOverride = 500
@@ -69,7 +69,7 @@ PART
 		runSpeed = 0.8
 	}
 
-	MODULE
+	MODULE:NEEDS[KIS]
 	{
 		name = ModuleKISInventory
 		maxVolume = 200
