--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Switchback2.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Switchback2.cfg
@@ -54,7 +54,7 @@ PART
 		}
 	}
 
-	MODULE
+	MODULE:NEEDS[KIS]
 	{
 		name = ModuleKISItemEvaTweaker
 		volumeOverride = 500
@@ -72,7 +72,7 @@ PART
 		staticAttachBreakForce = 2000
 	}
 
-	MODULE
+	MODULE:NEEDS[KIS]
 	{
 		name = ModuleKISInventory
 		maxVolume = 200
@@ -99,7 +99,7 @@ PART
 		chargeRate = .7
 	}
 
-	MODULE
+	MODULE:NEEDS[KAS]
 	{
 		name = KASModuleStrut 
 		nodeTransform = plugPort
