--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/TunnelExtender.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/TunnelExtender.cfg
@@ -39,7 +39,7 @@ PART
 	breakingTorque = 5000
 	bulkheadProfiles = size1, srf
 
-	MODULE
+	MODULE:NEEDS[KIS]
 	{
 		name = ModuleKISItemEvaTweaker
 		volumeOverride = 500
@@ -65,7 +65,7 @@ PART
 		chargeRate = .7
 	}
 
-	MODULE
+	MODULE:NEEDS[KIS]
 	{
 		name = ModuleKISPartMount
 		mountedPartNode = bottom
