--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Casa.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Casa.cfg
@@ -178,7 +178,7 @@ PART
 		IconPath = Squad/PartList/SimpleIcons/R&D_node_icon_advsciencetech
 	}
 
-	MODULE
+	MODULE:NEEDS[KIS]
 	{
 		name = ModuleKISItemEvaTweaker
 		editorItemsCategory = false
@@ -282,7 +282,7 @@ opsViewTitle = Ponderosa Operations
 		efficiencyType = habitation
 	}
 
-	MODULE
+	MODULE:NEEDS[KIS]
 	{
 		name = ModuleKISInventory
 		maxVolume = 8000
