--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Gaslight.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Gaslight.cfg
@@ -35,7 +35,7 @@ PART
 	breakingTorque = 2000
 	bulkheadProfiles = size1, srf
 
-	MODULE
+	MODULE:NEEDS[KAS]
 	{
 		name = KASModulePort
 		attachNode = top
@@ -43,7 +43,7 @@ PART
 		breakForce = 30
 		nodeTransformName = plugPort1
 	}
-	MODULE
+	MODULE:NEEDS[KAS]
 	{
 		name = KASModuleStrut 
 		nodeTransform = plugPort1
@@ -64,7 +64,7 @@ PART
 		tubeTexPath = KAS/Textures/pipe
 	}
 
-	MODULE
+	MODULE:NEEDS[KIS]
 	{
 		name = ModuleKISItem
 		volumeOverride = 250
