--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/OldFaithful.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/OldFaithful.cfg
@@ -64,7 +64,7 @@ PART
 	radiatorHeadroom = 0.75
 	thermalMassModifier = 2.5
 
-	MODULE
+	MODULE:NEEDS[KIS]
 	{
 		name = ModuleKISItemEvaTweaker
 		editorItemsCategory = false
