--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Sombrero.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Sombrero.cfg
@@ -68,7 +68,7 @@ PART
 		trackingSpeed = 0.25		
 	}
 
-	MODULE
+	MODULE:NEEDS[KAS]
 	{
 		name = KASModulePort
 		attachNode = top
@@ -76,7 +76,7 @@ PART
 		breakForce = 30
 		nodeTransformName = plugPort1
 	}
-	MODULE
+	MODULE:NEEDS[KAS]
 	{
 		name = KASModuleStrut 
 		nodeTransform = plugPort1
@@ -97,7 +97,7 @@ PART
 		tubeTexPath = KAS/Textures/pipe
 	}
 
-	MODULE
+	MODULE:NEEDS[KIS]
 	{
 		name = ModuleKISItem
 		volumeOverride = 975
