--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Spyglass.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Spyglass.cfg
@@ -63,7 +63,7 @@ PART
 		  name = WBI_SpyglassSpace
 	}
 
-	MODULE
+	MODULE:NEEDS[KIS]
 	{
 		name = ModuleKISItemEvaTweaker
 		volumeOverride = 950
@@ -78,7 +78,7 @@ PART
 		runSpeed = 0.8
 	}
 
-	MODULE
+	MODULE:NEEDS[ExtraplanetaryLaunchpads]
 	{
 		name = ExSurveyStation
 	}
@@ -114,7 +114,7 @@ PART
 		name = WBISpyglassOpsView
 	}
 
-	MODULE
+	MODULE:NEEDS[KAS]
 	{
 		name = KASModuleStrut 
 		nodeTransform = plugPort
@@ -137,14 +137,6 @@ PART
 
 	MODULE
 	{
-		//This module is used to change the screens of any monitor props in your IVA. The prop needs to have an InternalScreenSwitcher.
-		name = WBIScreenPropHelper
-
-		//Number of seconds to wait before changing the screens
-		//Set to 0 to keep the images static.
-		screenChangeSeconds = 30.0
-
-		//Separate your paths with a semicolon. Don't forget to add a "/" at the end of your path!
-		screenImagePaths = WildBlueIndustries/Pathfinder/Spaces/Screens/
+		name = WBIPropStateHelper
 	}
 }
