--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Telegraph.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Telegraph.cfg
@@ -58,7 +58,7 @@ PART
 		DeployFxModules = 0
 	}
 
-	MODULE
+	MODULE:NEEDS[KAS]
 	{
 		name = KASModulePort
 		attachNode = top
@@ -66,7 +66,7 @@ PART
 		breakForce = 30
 		nodeTransformName = plugPort1
 	}
-	MODULE
+	MODULE:NEEDS[KAS]
 	{
 		name = KASModuleStrut 
 		nodeTransform = plugPort1
@@ -87,7 +87,7 @@ PART
 		tubeTexPath = KAS/Textures/pipe
 	}
 
-	MODULE
+	MODULE:NEEDS[KIS]
 	{
 		name = ModuleKISItem
 		volumeOverride = 975
