--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Production/DocSciLab.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Production/DocSciLab.cfg
@@ -103,7 +103,7 @@ PATH_SCIENCE
 		debugMode = false
 
 		canCreateExperiments = true
-		experimentCreationSkill = Scientist
+		experimentCreationSkill = ScienceSkill
 		minimumCreationLevel = 2
 		defaultCreationResource = ResearchKits
 		minimumCreationAmount = 100.0
