--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Command/Ponderosa.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Command/Ponderosa.cfg
@@ -60,7 +60,7 @@ PART
 		allowRepeatedSubjects = True
 	}
 
-	MODULE
+	MODULE:NEEDS[KIS]
 	{
 		name = ModuleKISItemEvaTweaker
 		editorItemsCategory = false
@@ -83,7 +83,7 @@ PART
 		ecRequired = 0.001
 	}
 
-	MODULE 
+	MODULE:NEEDS[Workshop] 
 	{
 		name = OseModuleWorkshop
 		ConversionRate = 1 // How much of a parts mass needs to be processed until it is done
@@ -93,7 +93,7 @@ PART
 		MinimumCrew = 2 // Amount of Kerbals needed for the Workshop to work
 	}
 
-	MODULE
+	MODULE:NEEDS[Workshop]
 	{
 		name = OseModuleRecycler
 		ConversionRate = 0.15 // How much of a parts mass will be recycled
@@ -284,7 +284,7 @@ opsViewTitle = Ponderosa Operations
 		textureQuadName = flagTransform
 	}
 
-	MODULE
+	MODULE:NEEDS[KIS]
 	{
 		name = ModuleKISInventory
 		maxVolume = 8000
