--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Chuckwagon.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Chuckwagon.cfg
@@ -144,7 +144,7 @@ PART
 		ecRequired = 0.001
 	}
 
-	MODULE
+	MODULE:NEEDS[KIS]
 	{
 		name = ModuleKISInventory
 		maxVolume = 2000
@@ -160,7 +160,7 @@ PART
 		defaultMoveSndPath = KIS/Sounds/itemMove
 	}
 
-	MODULE
+	MODULE:NEEDS[KIS]
 	{
 		name = ModuleKISItemEvaTweaker
 		editorItemsCategory = false
