--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Hacienda.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Hacienda.cfg
@@ -369,7 +369,7 @@ PART
 		ecRequired = 0.001
 	}
 
-	MODULE
+	MODULE:NEEDS[KIS]
 	{
 		name = ModuleKISInventory
 		maxVolume = 14500
@@ -385,7 +385,7 @@ PART
 		defaultMoveSndPath = KIS/Sounds/itemMove
 	}
 
-	MODULE
+	MODULE:NEEDS[KIS]
 	{
 		name = ModuleKISItemEvaTweaker
 		editorItemsCategory = false
