--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Mineshaft.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Mineshaft.cfg
@@ -60,7 +60,7 @@ PART
 	fuelCrossFeed = True
 	bulkheadProfiles = size1, srf
 
-	MODULE
+	MODULE:NEEDS[KAS]
 	{
 		name = KASModuleStrut 
 		nodeTransform = plugPort
@@ -81,7 +81,7 @@ PART
 		tubeTexPath = WildBlueIndustries/Pathfinder/Assets/GenericFabric
 	}
 
-	MODULE
+	MODULE:NEEDS[KIS]
 	{
 		name = ModuleKISItemEvaTweaker
 		editorItemsCategory = false
