--- a/Extras/MCM/Parts/HomesteadMk2.cfg
+++ b/Extras/MCM/Parts/HomesteadMk2.cfg
@@ -301,7 +301,7 @@ PART
 opsViewTitle = Homestead Operations
 
 		//Snacks
-		resourcesToKeep:NEEDS[Snacks] = ElectricCharge;Snacks
+		resourcesToKeep:NEEDS[SnacksUtils] = ElectricCharge;Snacks
 
 		//Kerbalism
 		resourcesToKeep:NEEDS[Kerbalism] = ElectricCharge;Shielding;Food;Oxygen
