--- a/Extras/MCM/Parts/MCM.cfg
+++ b/Extras/MCM/Parts/MCM.cfg
@@ -238,7 +238,7 @@ PART
 		decalsVisible = true
 
 		//Snacks
-		resourcesToKeep:NEEDS[Snacks] = ElectricCharge;Snacks
+		resourcesToKeep:NEEDS[SnacksUtils] = ElectricCharge;Snacks
 
 		//Kerbalism
 		resourcesToKeep:NEEDS[Kerbalism] = ElectricCharge;Shielding;Food;Oxygen
