--- a/GameData/WildBlueIndustries/Buffalo/Parts/Structural/ChassisEndu.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Structural/ChassisEndu.cfg
@@ -76,7 +76,7 @@ PART
 		//Short name of the default module template.
 		//This is used when selecting the part in the editor.
 		//User will then right-click on the module to change its type.
-		defaultTemplate = Battery Pack
+		defaultTemplate = Battery
 
 		//Some containers don't hold as much resources as the template specifies, while others hold more.
 		//Since the resource templates specify base amounts, the capacity factor specifies a multiplier to
