--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_KPBS.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_KPBS.cfg
@@ -117,7 +117,7 @@
 		//Short name of the default module template.
 		//This is used when selecting the part in the editor.
 		//User will then right-click on the module to change its type.
-		defaultTemplate = Science Lab
+		defaultTemplate = DocScience
 
 		//If the part has a KIS container, this is the base and max amount
 		baseStorage = 1000
@@ -177,7 +177,7 @@
 		//Short name of the default module template.
 		//This is used when selecting the part in the editor.
 		//User will then right-click on the module to change its type.
-		defaultTemplate = Geology Lab
+		defaultTemplate = GeoLab
 
 		//If the part has a KIS container, this is the base and max amount
 		baseStorage = 500
@@ -194,7 +194,7 @@
 	}
 }
 
-@PART[KKAOSS_Greenhouse_g]:FOR[Pathfinder]:NEEDS[PlanetarySurfaceStructures,Snacks]
+@PART[KKAOSS_Greenhouse_g]:FOR[Pathfinder]:NEEDS[PlanetarySurfaceStructures,SnacksUtils]
 {
 	!MODULE[PlanetaryGreenhouse]{}
 
@@ -235,12 +235,6 @@
 		{
 			ResourceName = ElectricCharge
 			Ratio = 6
-		}
-
-		REQUIRED_RESOURCE
-		{
-			ResourceName = Fertilizer
-			Ratio = 100
 		}
 	}
 
