--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_Snacks.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_Snacks.cfg
@@ -1,5 +1,5 @@
 //This MM patch configures Pathfinder's life support systems to use Snacks.
-@PATH_HABITATION[Pigpen]:NEEDS[Snacks]
+@PATH_HABITATION[Pigpen]:NEEDS[SnacksUtils]
 {
 	MODULE
 	{
@@ -67,7 +67,7 @@
 
 }
 
-@GREENHOUSE[Prairie]:NEEDS[Snacks]
+@GREENHOUSE[Prairie]:NEEDS[SnacksUtils]
 {
 	MODULE
 	{
@@ -120,12 +120,6 @@
 			ResourceName = ElectricCharge
 			Ratio = 6
 		}
-
-		REQUIRED_RESOURCE
-		{
-			ResourceName = Fertilizer
-			Ratio = 101.25
-		}
 	}
 
 	RESOURCE
@@ -144,9 +138,16 @@
 		isTweakable = true
 	}
 
+	RESOURCE
+	{
+		name = Soil
+		amount = 1000
+		maxAmount = 1000
+		isTweakable = false
+	}
 }
 
-@PATH_INDUSTRY[CropWorks]:NEEDS[Snacks]
+@PATH_INDUSTRY[CropWorks]:NEEDS[SnacksUtils]
 {
 	MODULE
 	{
@@ -222,9 +223,17 @@
 		maxAmount = 4000
 		isTweakable = true
 	}
+
+	RESOURCE
+	{
+		name = Soil
+		amount = 4000
+		maxAmount = 4000
+		isTweakable = false
+	}
 }
 
-@PATH_SCIENCE[Watney]:NEEDS[Snacks]
+@PATH_SCIENCE[Watney]:NEEDS[SnacksUtils]
 {
 	MODULE
 	{
@@ -278,7 +287,7 @@
 	}
 }
 
-@PART[WBI_Outback]:NEEDS[Snacks]
+@PART[WBI_Outback]:NEEDS[SnacksUtils]
 {
 	@MODULE[WBIOutback]
 	{
@@ -286,7 +295,7 @@
 	}
 }
 
-@PART[WBI_Chuckwagon]:NEEDS[Snacks]
+@PART[WBI_Chuckwagon]:NEEDS[SnacksUtils]
 {
 	@MODULE[WBIMultipurposeStorage]
 	{
@@ -301,7 +310,7 @@
 	}
 }
 
-@PART[WBI_DocSciLab]:NEEDS[Snacks]
+@PART[WBI_DocSciLab]:NEEDS[SnacksUtils]
 {
 	@MODULE[WBIMultipurposeLab]
 	{
@@ -316,7 +325,7 @@
 	}
 }
 
-@PART[WBI_Hacienda]:NEEDS[Snacks]
+@PART[WBI_Hacienda]:NEEDS[SnacksUtils]
 {
 	@MODULE[WBIMultipurposeHab]
 	{
@@ -331,7 +340,7 @@
 	}
 }
 
-@PART[WBI_Ponderosa]:NEEDS[Snacks]
+@PART[WBI_Ponderosa]:NEEDS[SnacksUtils]
 {
 	@MODULE[WBIMultipurposeHab]
 	{
@@ -346,7 +355,7 @@
 	}
 }
 
-@PART[WBI_Ponderosa2]:NEEDS[Snacks]
+@PART[WBI_Ponderosa2]:NEEDS[SnacksUtils]
 {
 	@MODULE[WBIMultipurposeHab]
 	{
@@ -361,7 +370,7 @@
 	}
 }
 
-@PART[WBI_Homestead]:NEEDS[Snacks]
+@PART[WBI_Homestead]:NEEDS[SnacksUtils]
 {
 	@MODULE[WBIMultipurposeHab]
 	{
