--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_TACLS.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_TACLS.cfg
@@ -126,6 +126,55 @@
 			DumpExcess = true
 		}
 	}
+
+	RESOURCE
+	{
+		name = Water
+		amount = 500
+		maxAmount = 500
+	}
+
+	RESOURCE
+	{
+		name = Waste
+		amount = 500
+		maxAmount = 500
+	}
+
+	RESOURCE
+	{
+		name = WasteWater
+		amount = 500
+		maxAmount = 500
+	}
+
+	RESOURCE
+	{
+		name = Minerals
+		amount = 500
+		maxAmount = 500
+	}
+
+	RESOURCE
+	{
+		name = Fertilizer
+		amount = 500
+		maxAmount = 500
+	}
+
+	RESOURCE
+	{
+		name = CarbonDioxide
+		amount = 5000
+		maxAmount = 5000
+	}
+
+	RESOURCE
+	{
+		name = Oxygen
+		amount = 5000
+		maxAmount = 5000
+	}
 }
 
 @GREENHOUSE[Prairie]:NEEDS[TacLifeSupport]
@@ -191,13 +240,6 @@
 			Ratio = 0.000115
 			DumpExcess = true
 		}
-
-		REQUIRED_RESOURCE
-		{
-			ResourceName = Fertilizer
-			Ratio = 100
-		}
-
 	}
 
 	RESOURCE
@@ -252,7 +294,7 @@
 GREENHOUSE:NEEDS[TacLifeSupport]
 {
 	author = Angel-125
-	name = Perpetual Greenhouse
+	name = PerpetualGreenhouse
 	title = Perpetual Greenhouse
 	description = The Continually Regenerating Agricultural Product greenhouse is able to constantly produce food if supplied with the right nutrients. Apparently the agricultural product tastes like wood.
 	includeModuleInfo = true
