--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_UKS.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_UKS.cfg
@@ -77,6 +77,9 @@
 
 @PATH_INDUSTRY[BrewWorks,CropWorks,Ironworks]:NEEDS[KolonyTools]
 {
+	@requiredResource = MaterialKits
+	@requiredAmount = 5000
+
 	MODULE
 	{
 		 name = USI_ModuleRecycleBin
@@ -85,6 +88,9 @@
 
 @PATH_INDUSTRY[Solarflare,HotSprings]:NEEDS[KolonyTools]
 {
+	@requiredResource = MaterialKits
+	@requiredAmount = 7500
+
 	MODULE
 	{
 		 name = USI_ModuleRecycleBin
@@ -98,6 +104,9 @@
 
 @PATH_INDUSTRY[Nukeworks]:NEEDS[KolonyTools]
 {
+	@requiredResource = MaterialKits
+	@requiredAmount = 5000
+
 	MODULE
 	{
 		 name = USI_ModuleRecycleBin
@@ -110,8 +119,11 @@
 	}
 }
 
-@PATH_HABITATION[Pigpen,Prairie,Blacksmith,GeoLab]:NEEDS[KolonyTools]
+@PATH_HABITATION[Pigpen,Blacksmith,GeoLab,PonderosaHab]:NEEDS[KolonyTools]
 {
+	@requiredResource = MaterialKits
+	@requiredAmount = 1500
+
 	MODULE
 	{
 		 name = USI_ModuleRecycleBin
@@ -120,8 +132,29 @@
 
 @PATH_SCIENCE[DocScience,Sunburn,Watney]:NEEDS[KolonyTools]
 {
+	@requiredResource = MaterialKits
+	@requiredAmount = 3000
+
 	MODULE
 	{
 		 name = USI_ModuleRecycleBin
 	}
+}
+
+@PATH_INDUSTRY[CropWorks]:NEEDS[KolonyTools]
+{
+	@requiredResource = MaterialKits
+	@requiredAmount = 5000
+}
+
+@PATH_INDUSTRY[ClaimJumper]:NEEDS[KolonyTools]
+{
+	@requiredResource = MaterialKits
+	@requiredAmount = 7500
+}
+
+@GREENHOUSE[Prairie,PerpetualGreenhouse]:NEEDS[KolonyTools]
+{
+	@requiredResource = MaterialKits
+	@requiredAmount = 1500
 }
