--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Hacienda.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Hacienda.cfg
@@ -330,7 +330,7 @@ PART
 		opsViewTitle = Hacienda Operations
 
 		//Snacks
-		resourcesToKeep:NEEDS[Snacks] = Snacks
+		resourcesToKeep:NEEDS[SnacksUtils] = Snacks
 
 		//Kerbalism
 		resourcesToKeep:NEEDS[Kerbalism] = Shielding;Food;Oxygen
