--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Storage/Snacks.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Storage/Snacks.cfg
@@ -1,9 +1,8 @@
-STORAGE_TEMPLATE
+STORAGE_TEMPLATE:NEEDS[SnacksUtils]
 {
 	author = Angel-125
 	name = Snacks
 	shortName = Snacks
-	needs = Snacks
 	logoPanel = WildBlueIndustries/Pathfinder/Decals/LifeSupport
 	glowPanel = WildBlueIndustries/Pathfinder/Decals/LifeSupportGlow
 	description = This kit stores Snacks!
