--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Command/Ponderosa.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Command/Ponderosa.cfg
@@ -238,7 +238,7 @@ PART
 		//Short name of the default module template.
 		//This is used when selecting the part in the editor.
 		//User will then right-click on the module to change its type.
-		defaultTemplate = Geology Lab
+		defaultTemplate = GeoLab
 
 		//Name of the logo panel transforms
 		logoPanelTransforms = logoPanel001, logoPanel002, logoPanel003, logoPanel004
@@ -253,7 +253,7 @@ PART
 opsViewTitle = Ponderosa Operations
 
 		//Snacks
-		resourcesToKeep:NEEDS[Snacks] = ElectricCharge;Snacks
+		resourcesToKeep:NEEDS[SnacksUtils] = ElectricCharge;Snacks
 
 		//Kerbalism
 		resourcesToKeep:NEEDS[Kerbalism] = ElectricCharge;Shielding;Food;Oxygen
