--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Science/DocSciLab.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Science/DocSciLab.cfg
@@ -161,7 +161,7 @@ PART
 		//Short name of the default module template.
 		//This is used when selecting the part in the editor.
 		//User will then right-click on the module to change its type.
-		defaultTemplate = Science Lab
+		defaultTemplate = DocScience
 
 		//Name of the logo panel transforms
 		logoPanelTransforms = logoPanel001, logoPanel002, logoPanel003, logoPanel004
@@ -175,7 +175,7 @@ PART
 	partToolTip = Just like a multipurpose habitat, this general-purpose science lab can be reconfigured for several different science roles with a feat of engineering- if you have the right resources and talent. A bastion of science, resources made by one of the lab's configurations will benefit from chemical analysis.
 
 		//Snacks
-		resourcesToKeep:NEEDS[Snacks] = ElectricCharge;Snacks
+		resourcesToKeep:NEEDS[SnacksUtils] = ElectricCharge;Snacks
 
 		//Kerbalism
 		resourcesToKeep:NEEDS[Kerbalism] = ElectricCharge;Shielding;Food;Oxygen
