--- a/GameData/WildBlueIndustries/Buffalo/Parts/Control/RCSModule.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Control/RCSModule.cfg
@@ -315,6 +315,16 @@ PART
 		}
 	}
 
+	MODULE
+	{
+		name = ModuleSurfaceFX
+		thrustProviderModuleIndex = 0
+		fxMax = 0.5
+		maxDistance = 30
+		falloff = 1.5
+		thrustTransformName = thrustTransform
+	}
+
 	RESOURCE
 	{
 		name = MonoPropellant
