--- a/GameData/WildBlueIndustries/Buffalo/Parts/Utility/CrewCab.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Utility/CrewCab.cfg
@@ -207,7 +207,7 @@ PART
 	//Simple geology lab to unlock a biome. Needs ModuleBiomeScanner.
 	MODULE
 	{
-		name = WBIBuffaloGeoLab
+		name = WBIGeoLab
 		moduleIsEnabled = false
 		showUpgradesInModuleInfo = true
 		UPGRADES
