--- a/GameData/WildBlueIndustries/Buffalo/Parts/Utility/GroundStabilizer.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Utility/GroundStabilizer.cfg
@@ -74,6 +74,7 @@ PART
 	{
 		name = WBIGroundStabilizer
 		animationName = Deploy
+		stabilizeWhenDeployed = false
 		startEventGUIName = Raise Stabilizers
 		endEventGUIName = Lower Stabilizers
 		actionGUIName = Raise/Lower Stabilizers
@@ -120,6 +121,11 @@ PART
 			targetName = InnerPiston002
 			rotatorsName = OuterPiston002
 		}
+	}
+
+	MODULE
+	{
+		name = WBIForceDock
 	}
 
 	DRAG_CUBE
