--- a/GameData/WildBlueIndustries/Buffalo/Parts/Utility/TrailerHitch2.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Utility/TrailerHitch2.cfg
@@ -88,6 +88,11 @@ PART
 		captureRange = 0.06
 	}
 
+	MODULE
+	{
+		name = WBIForceDock
+	}
+
 	DRAG_CUBE
 	{
 		cube = A, 0.1119,0.8139,0.4676, 0.1119,0.8146,0.7671, 0.2631,0.8442,0.9339, 0.2631,0.8534,0.8475, 0.2898,0.8115,0.5754, 0.2898,0.9174,0.6096, -2.98E-08,-0.1204,0.1042, 0.846,0.8491,0.5264
