--- a/GameData/WildBlueIndustries/Buffalo/Parts/Command/BuffaloCab.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Command/BuffaloCab.cfg
@@ -37,7 +37,7 @@ PART
 	breakingForce = 50
 	breakingTorque = 50
 	bulkheadProfiles = size1, srf
-	vesselType = Lander
+	vesselType = Rover
 	CrewCapacity = 2
 	CoMOffset = 0, 0, 0.4
 
