--- a/GameData/WildBlueIndustries/Buffalo/Parts/Utility/GroundStabilizer.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Utility/GroundStabilizer.cfg
@@ -72,7 +72,7 @@ PART
 
 	MODULE
 	{
-		name = WBIGroundStabilizer
+		name = ModuleAnimateGenericSFX
 		animationName = Deploy
 		stabilizeWhenDeployed = false
 		startEventGUIName = Raise Stabilizers
