--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_Snacks.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_Snacks.cfg
@@ -17,7 +17,7 @@
 		 
 		INPUT_RESOURCE
 		{
-			ResourceName = Organics
+			ResourceName = Ore
 			Ratio = .002
 		}
 
@@ -43,7 +43,7 @@
 
 	RESOURCE
 	{
-		name = Organics
+		name = Ore
 		amount = 500
 		maxAmount = 500
 		isTweakable = false
@@ -230,60 +230,6 @@
 		amount = 4000
 		maxAmount = 4000
 		isTweakable = false
-	}
-}
-
-@PATH_SCIENCE[Watney]:NEEDS[SnacksUtils]
-{
-	MODULE
-	{
-		name = ModuleResourceConverter
-		ConverterName = O-Chem
-		StartActionName = Start O-Chem
-		StopActionName = Stop O-Chem
-		AutoShutdown = false
-		GeneratesHeat = false
-		UseSpecialistBonus = true
-		SpecialistEfficiencyFactor = 0.2
-		SpecialistBonusBase = 0.05
-		ExperienceEffect = ConverterSkill
-		EfficiencyBonus = 1
-
- 
-		INPUT_RESOURCE
-		{
-			ResourceName = Ore
-			Ratio = 0.002
-			FlowMode = STAGE_PRIORITY_FLOW
-		}
-
-		INPUT_RESOURCE
-		{
-			ResourceName = Water
-			Ratio = 0.002
-			FlowMode = STAGE_PRIORITY_FLOW
-		}
-
-		INPUT_RESOURCE
-		{
-			ResourceName = Minerals
-			Ratio = 0.002
-			FlowMode = STAGE_PRIORITY_FLOW
-		}
-
-		INPUT_RESOURCE
-		{
-			ResourceName = ElectricCharge
-			Ratio = 48
-		}
-
-		OUTPUT_RESOURCE
-		{	
-			ResourceName = Organics
-			Ratio = 0.0002
-			DumpExcess = false
-			FlowMode = STAGE_PRIORITY_FLOW
-		}
 	}
 }
 
