--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_TACLS.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_TACLS.cfg
@@ -4,52 +4,6 @@
 	MODULE
 	{
 		name = ModuleResourceConverter
-		ConverterName = Composter
-		StartActionName = Start Composter
-		StopActionName = Stop Composter
-		AutoShutdown = false
-		GeneratesHeat = false
-		UseSpecialistBonus = true
-		SpecialistEfficiencyFactor = 0.2
-		SpecialistBonusBase = 0.05
-		ExperienceEffect = ScienceSkill
-		EfficiencyBonus = 1
-		 
-		INPUT_RESOURCE
-		{
-			ResourceName = Water
-			Ratio = 1.25
-		}
-
-		INPUT_RESOURCE
-		{
-			ResourceName = Waste
-			Ratio = 0.1
-		}
-
-		INPUT_RESOURCE
-		{
-			ResourceName = Minerals
-			Ratio = 0.037
-		}
-
-		INPUT_RESOURCE
-		{
-			ResourceName = ElectricCharge
-			Ratio = 3.5
-		}
-
-		OUTPUT_RESOURCE
-		{
-			ResourceName = Fertilizer
-			Ratio = 1
-			DumpExcess = false
-		}
-	}
-
-	MODULE
-	{
-		name = ModuleResourceConverter
 		ConverterName = Water Filter
 		StartActionName = Start Water Filter
 		StopActionName = Stop Water Filter
@@ -150,20 +104,6 @@
 
 	RESOURCE
 	{
-		name = Minerals
-		amount = 500
-		maxAmount = 500
-	}
-
-	RESOURCE
-	{
-		name = Fertilizer
-		amount = 500
-		maxAmount = 500
-	}
-
-	RESOURCE
-	{
 		name = CarbonDioxide
 		amount = 5000
 		maxAmount = 5000
@@ -223,7 +163,7 @@
 
 		INPUT_RESOURCE
 		{
-			ResourceName = Fertilizer
+			ResourceName = Waste
 			Ratio = 0.000001
 		}
 
@@ -284,7 +224,7 @@
 
 	RESOURCE
 	{
-		name = Fertilizer
+		name = Waste
 		amount = 1000
 		maxAmount = 1000
 		isTweakable = true
@@ -341,7 +281,7 @@ GREENHOUSE:NEEDS[TacLifeSupport]
 
 		INPUT_RESOURCE
 		{
-			ResourceName = Fertilizer
+			ResourceName = Waste
 			Ratio = 0.000001
 		}
 
@@ -364,13 +304,6 @@ GREENHOUSE:NEEDS[TacLifeSupport]
 			ResourceName = Food
 			Ratio = 0.00014
 		}
-
-		REQUIRED_RESOURCE
-		{
-			ResourceName = Fertilizer
-			Ratio = 100
-		}
-
 	}
 
 	RESOURCE
@@ -415,7 +348,7 @@ GREENHOUSE:NEEDS[TacLifeSupport]
 
 	RESOURCE
 	{
-		name = Fertilizer
+		name = Waste
 		amount = 1000
 		maxAmount = 1000
 		isTweakable = true
@@ -468,7 +401,7 @@ GREENHOUSE:NEEDS[TacLifeSupport]
 
 		INPUT_RESOURCE
 		{
-			ResourceName = Fertilizer
+			ResourceName = Waste
 			Ratio = 0.000002
 		}
 
@@ -485,13 +418,6 @@ GREENHOUSE:NEEDS[TacLifeSupport]
 			Ratio = 0.000230
 			DumpExcess = true
 		}
-
-		REQUIRED_RESOURCE
-		{
-			ResourceName = Fertilizer
-			Ratio = 250
-		}
-
 	}
 
 	RESOURCE
@@ -536,7 +462,7 @@ GREENHOUSE:NEEDS[TacLifeSupport]
 
 	RESOURCE
 	{
-		name = Fertilizer
+		name = Waste
 		amount = 1000
 		maxAmount = 1000
 		isTweakable = true
