--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/GoldDigger.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/GoldDigger.cfg
@@ -152,7 +152,7 @@ PART
 	{
 		name = WBIModuleCoreSample
 		resourceType = 0
-		drillTechNode = specializedConstruction
+		drillTechNode = advConstruction
 		analysisGUIName = Take Core Sample
 		analysisActionName = Run Analysis
 		analysisSkill = Scientist
