--- a/GameData/WildBlueIndustries/Buffalo/Parts/Command/AuxEN.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Command/AuxEN.cfg
@@ -127,6 +127,32 @@ PART
 			}
 		}
 	}
+	MODULE
+	{
+		name = ModuleKerbNetAccess
+		MinimumFoV = 21
+		MaximumFoV = 54
+		DISPLAY_MODES
+		{
+			Mode = Terrain
+		}
+
+		showUpgradesInModuleInfo = true
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = WBIFlightControl2
+				description__ = Can now scan Biomes; Anomaly Detection: 6%
+				AnomalyDetection = 0.06
+				DISPLAY_MODES
+				{
+					Mode = Biome
+					Mode = Terrain
+				}
+			}
+		}		
+	}
 	MODULE:NEEDS[kOS]
 	{
 	    name = kOSProcessor
